# sigma

./: .dependency-cruiser.cjs  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md  VALIDATION.md  architecture-policy.json  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sigma-manifest.json  stryker.kernel.conf.mjs  stryker.protocol.conf.mjs  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.mutation.kernel.config.ts  vitest.mutation.protocol.config.ts
.github/: dependabot.yml  pull_request_template.md
docs/: GETTING_STARTED.md  PRODUCTIZATION_TUI_PLAN.md  PRODUCT_READINESS_CHECKLIST.md  evaluation-v2.md
native/sigma-exec/: Cargo.toml  README.md
native/sigma-exec/src/: linux_hardening.rs  linux_mount_source.rs  main.rs  managed_server.rs  output.rs  output_artifact.rs  platform.rs  process.rs  protocol.rs  repository_lease.rs  repository_transaction.rs  repository_transaction_tests.rs  sandbox.rs  scratch.rs  unix_pty.rs  windows_sandbox.rs
scripts/: archive-safety.mjs  bench-common.mjs  bench-cross-agent-normalize.mjs  bench-cross-agent-paired.mjs  bench-paired-gate.mjs  bench-report.mjs  bench-sample-plan.mjs  bench-task-identity-archive.mjs  bench-terminal-bench-formal-preregistration.mjs  bench-terminal-bench-formal.mjs  bench-terminal-bench.mjs  build-linux-portable-runtime.mjs  check-architecture.mjs  check-native-protocol-coverage.mjs  generate-sigma-manifest.mjs  harbor-docker-cleanup.mjs  harbor-runtime-freeze.mjs  linux-elf.mjs  (+25 more)
(+323 files in other folders)
